Правки локализации.